# ssb-db

./: .travis.yml  Cargo.toml  README.md  aliases.js  search-index.js  settings.html  source-files.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/snafu/: trait.ErrorCompat.js
implementors/ssb_db/: trait.SsbDb.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
migrations/2019-11-18-201151_create_messages/: up.sql
migrations/2019-11-18-201201_create_authors/: up.sql
migrations/2019-11-18-201205_create_keys/: up.sql
src/: lib.rs
src/db/: mod.rs  schema.rs
src/db/models/: authors.rs  keys.rs  messages.rs
src/error/: mod.rs
src/sqlite_ssb_db/: mod.rs
src/ssb_db/: lib.rs.html
src/ssb_db/db/: mod.rs.html  schema.rs.html
src/ssb_db/db/models/: authors.rs.html  keys.rs.html  messages.rs.html  mod.rs.html
src/ssb_db/error/: mod.rs.html
src/ssb_db/sqlite_ssb_db/: mod.rs.html
src/ssb_db/ssb_message/: mod.rs.html
src/ssb_message/: mod.rs
ssb_db/: all.html  enum.Error.html  index.html  sidebar-items.js  struct.SqliteSsbDb.html  trait.SsbDb.html  type.FlumeSequence.html  type.Result.html
ssb_db/error/: enum.Error.html  index.html  type.Result.html
ssb_db/sqlite_ssb_db/: index.html  sidebar-items.js  struct.SqliteSsbDb.html
