[package]
name = "ssb-db"
version = "0.1.3"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
edition = "2018"


[dependencies]
diesel = { version = "1.4.3", features = ["sqlite"] }
diesel_migrations = "1.4.0"
flumedb = { git = "https://github.com/sunrise-choir/flumedb-rs", branch = "go_offset_log" }
itertools = "0.8.0"
libsqlite3-sys = { version = "0.16.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.6.0"
ssb-multiformats = {git = "https://github.com/sunrise-choir/ssb-multiformats", version = "0.2"} 
ssb-legacy-msg-data = {git = "https://github.com/sunrise-choir/legacy-msg-data"}
