[package]
name = "ssb-db"
version = "0.1.5"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
description = "sqlite-backed ssb feed database"
repository = "https://github.com/sunrise-choir/ssb-db"
documentation = "https://docs.rs/ssb-db/"
readme = "README.md"
keywords = ["ssb", "scuttlebutt"]


[dependencies]
diesel = { version = "1.4.3", features = ["sqlite"] }
diesel_migrations = "1.4.0"
flumedb = "0.1.3"
itertools = "0.8.0"
libsqlite3-sys = { version = "0.16.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.6.0"
ssb-multiformats = "0.2.1"
ssb-json-msg-data = "0.1.2"
