[package]
name = "ssb-db"
version = "0.1.6"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
edition = "2018"
license = "LGPL-3.0"
description = "The most basic sqlite backed db that you need to do replication on ssb"


[dependencies]
diesel = { version = "1.4.3", features = ["sqlite"] }
diesel_migrations = "1.4.0"
flumedb = "0.1.4"
itertools = "0.8.0"
libsqlite3-sys = { version = "0.16.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.6.0"
ssb-multiformats = "0.4.0"
ssb-legacy-msg-data = "0.1.2" 
